# syndicate

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  =7.0  BOOKLET.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  MANIFEST.in  Makefile  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_v3.7.0.md  VERCEL_BUILD_FIX.md  blueprint_android.md  context.md  cortex_memory.template.json  db_manager.py  docker-compose.yml  gui.py  main.py  output_log.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.ps1  setup.sh  setup_overview.md  user_review.md  vercel.json
backups/: backup_ts.txt
changelog/: CHANGELOG.md
data/: gold_standard.db
docker/: README.md  docker-compose.yml
docker-data/: README.md
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  NOTION_MIGRATION.md  OPERATIONS.md  README.md  RELEASE.md  RELEASE_FIX.md  SETUP_GUIDE.md  SUMMARY.md  SYNDICATE_REIGN.md  UI_REBRANDING.md  gui_mockup.html  guide.html  index.html  index_docs.html  mvp_android.md  odyssey.html  odyssey_sys.html  output_samples(test).md  pre_audit_report.md  web_ui_mockup.html
gold_standard/: __init__.py
scripts/: apply_discord_blueprint.py  chart_publisher.py  check_llms.py  check_notion.py  check_status.py  cleanup_manager.py  console_ui.py  create_discord_webhook.py  deploy_grafana_dashboard.py  deploy_output_to_pages.sh  discord_cleanup.py  discord_list_guilds_and_channels.py  discord_report_metrics.py  discord_setup.py  e2e_smoke.sh  economic_calendar.py  enable_notion_sync.py  executor_daemon.py  file_organizer.py  frontmatter.py  genai_compat.py  get_gold_price.py  health_check.py  health_check_runner.sh  init_cortex.py  insights_engine.py  install_local_llm.sh  journal_reviser.py  list_actions_verbose.py  list_gemini_models.py  live_analysis.py  llm_worker.py  local_llm.py  market_digest.py  metrics.py  metrics_server.py  move_docker_data.sh  notifier.py  notion_cleanup_archive_backedup_digests.py  notion_cleanup_remove_test_rows.py  (+29 more)
site/: ai_policy.html  architecture.html  index.html  license.html  privacy.html  scripts.js  styles.css  terms.html
system-design/: system_map.html
tests/: conftest.py  test_adx_robust.py  test_core.py  test_db_bot_audit.py  test_digest_bot.py  test_digest_premarket_summary.py  test_digest_workflow.py  test_file_organizer.py  test_frontmatter_publish.py  test_gemini.py  test_genai_compat.py  test_health_check.py  test_ingest_bot.py  test_init_cortex.py  test_insights.py  test_integration.py  test_llm_worker_sanitizer.py  test_notifier.py  test_notion_datasource.py  test_notion_failure_alert.py  test_notion_webhooks.py  test_ollama_integration.py  test_pins.py  (+7 more)
(+222 files in other folders)
