[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gost"
version = "3.7.0"
description = "Syndicate - Autonomous precious metals intelligence system with AI-powered analysis"
readme = "README.md"
license = "MIT"
authors = [
    {name = "amuzetnoM", email = "amuzetnom@users.noreply.github.com"}
]
maintainers = [
    {name = "amuzetnoM", email = "amuzetnom@users.noreply.github.com"}
]
keywords = [
    "gold",
    "trading",
    "analysis",
    "ai",
    "gemini",
    "precious-metals",
    "finance",
    "technical-analysis",
    "market-analysis",
    "autonomous"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "yfinance>=0.2.66",
    "pandas>=2.0.0",
    "pandas_ta>=0.4.71b0",
    "mplfinance>=0.12.10b0",
    "google-genai>=1.55.0",  # new official Google GenAI client (replaces google-generativeai)
    "schedule>=1.2.0",
    "colorama>=0.4.6",
    "filelock>=3.0.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
gui = [
    "tkinter",
]
webui = [
    "Flask>=3.0.0",
    "Flask-SocketIO>=5.3.0",
    "python-socketio>=5.10.0",
    "eventlet>=0.35.0",
]

[project.urls]
Homepage = "https://github.com/amuzetnoM/gold_standard"
Documentation = "https://github.com/amuzetnoM/gold_standard#readme"
Repository = "https://github.com/amuzetnoM/gold_standard.git"
Issues = "https://github.com/amuzetnoM/gold_standard/issues"
Changelog = "https://github.com/amuzetnoM/gold_standard/releases"

[project.scripts]
gost = "gost.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gost = [
    "*.json",
    "*.template.json",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
